src/parse/parsetiger.output
Non-terminaux inutiles dans la grammaire

    recfields
    recfields.1
    recfield


Terminaux inutilisés dans la grammaire

    "import"


Règles inutiles dans la grammaire

   85 recfields: ε
   86          | recfields.1

   87 recfields.1: recfield
   88            | recfields.1 "," recfield

   89 recfield: "identifier" "=" exp


État 2 conflits: 1 décalage/réduction


Grammaire

    0 $accept: program "end of file"

    1 program: exp
    2        | chunks

    3 exp: "integer"
    4    | "string"
    5    | "nil"
    6    | lvalue
    7    | "(" exps ")"
    8    | "identifier" "(" args ")"
    9    | lvalue "." "identifier" "(" args ")"
   10    | "identifier" "[" exp "]" "of" exp
   11    | "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   12    | lvalue ":=" exp
   13    | "if" exp "then" exp
   14    | "if" exp "then" exp "else" exp
   15    | "while" exp "do" exp
   16    | "for" "identifier" ":=" exp "to" exp "do" exp
   17    | "break"
   18    | "let" chunks "in" exps "end"
   19    | exp "+" exp
   20    | exp "-" exp
   21    | exp "*" exp
   22    | exp "/" exp
   23    | exp "=" exp
   24    | exp "<>" exp
   25    | exp "<" exp
   26    | exp "<=" exp
   27    | exp ">" exp
   28    | exp ">=" exp
   29    | "-" exp
   30    | exp "&" exp
   31    | exp "|" exp
   32    | "new" typeid
   33    | "_cast" "(" exp "," ty ")"

   34 lvalue: "identifier"
   35       | lvalue "." "identifier"
   36       | lvalue "[" exp "]"

   37 exps: ε
   38     | exps.1

   39 exps.1: exp
   40       | exps.1 ";" exp

   41 args: ε
   42     | args.1

   43 args.1: exp
   44       | args.1 "," exp

   45 chunks: ε
   46       | tychunk chunks
   47       | varchunk chunks
   48       | funchunk chunks

   49 varchunk: vardec
   50         | vardec varchunk

   51 funchunk: fundec
   52         | fundec funchunk

   53 vardec: "var" "identifier" ":=" exp
   54       | "var" "identifier" ":" typeid ":=" exp

   55 formals: ε
   56        | formals.1

   57 formals.1: tyfield
   58          | formals.1 "," tyfield

   59 fundec: "function" "identifier" "(" formals ")" "=" exp
   60       | "function" "identifier" "(" formals ")" ":" typeid "=" exp
   61       | "primitive" "identifier" "(" formals ")"
   62       | "primitive" "identifier" "(" formals ")" ":" typeid

   63 classfields: ε
   64            | varchunk classfields
   65            | methodchunk classfields

   66 methodchunk: methoddec
   67            | methoddec methodchunk

   68 methoddec: "method" "identifier" "(" formals ")" "=" exp
   69          | "method" "identifier" "(" formals ")" ":" typeid "=" exp

   70 tychunk: tydec
   71        | tydec tychunk

   72 tydec: "type" "identifier" "=" ty

   73 ty: typeid
   74   | "{" tyfields "}"
   75   | "array" "of" typeid
   76   | "class" "extends" typeid "{" classfields "}"
   77   | "class" "{" classfields "}"

   78 tyfields: ε
   79         | tyfields.1

   80 tyfields.1: tyfields.1 "," tyfield
   81           | tyfield

   82 tyfield: "identifier" ":" typeid

   83 typeid: "identifier"
   84       | "_namety" "(" "integer" ")"


Terminaux, suivis des règles où ils apparaissent

    "end of file" (0) 0
    error (256)
    "string" <std::string> (258) 4
    "identifier" <misc::symbol> (259) 8 9 10 16 34 35 53 54 59 60 61 62 68 69 72 82 83
    "integer" <int> (260) 3 11 84
    "&" (261) 30
    "array" (262) 75
    ":=" (263) 12 16 53 54
    "break" (264) 17
    "_cast" (265) 33
    "class" (266) 76 77
    ":" (267) 54 60 62 69 82
    "," (268) 33 44 58 80
    "/" (269) 22
    "do" (270) 15 16
    "." (271) 9 35
    "else" (272) 14
    "end" (273) 18
    "=" (274) 23 59 60 68 69 72
    "extends" (275) 76
    "for" (276) 16
    "function" (277) 59 60
    ">=" (278) 28
    ">" (279) 27
    "if" (280) 13 14
    "import" (281)
    "in" (282) 18
    "{" (283) 74 76 77
    "[" (284) 10 11 36
    "<=" (285) 26
    "let" (286) 18
    "(" (287) 7 8 9 11 33 59 60 61 62 68 69 84
    "<" (288) 25
    "-" (289) 20 29
    "method" (290) 68 69
    "<>" (291) 24
    "new" (292) 32
    "nil" (293) 5
    "of" (294) 10 11 75
    "|" (295) 31
    "+" (296) 19
    "primitive" (297) 61 62
    "}" (298) 74 76 77
    "]" (299) 10 11 36
    ")" (300) 7 8 9 11 33 59 60 61 62 68 69 84
    ";" (301) 40
    "then" (302) 13 14
    "*" (303) 21
    "to" (304) 16
    "type" (305) 72
    "var" (306) 53 54
    "while" (307) 15
    UMINUS (308)
    "_chunks" (309)
    "_namety" (310) 11 84


Non-terminaux, suivis des règles où ils apparaissent

    $accept (56)
        à gauche: 0
    program (57)
        à gauche: 1 2
        à droite: 0
    exp <ast::Exp*> (58)
        à gauche: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
        à droite: 1 10 11 12 13 14 15 16 19 20 21 22 23 24 25 26 27 28 29 30 31 33 36 39 40 43 44 53 54 59 60 68 69
    lvalue <ast::Var*> (59)
        à gauche: 34 35 36
        à droite: 6 9 12 35 36
    exps <ast::exps_type*> (60)
        à gauche: 37 38
        à droite: 7 18
    exps.1 <ast::exps_type*> (61)
        à gauche: 39 40
        à droite: 38 40
    args <ast::exps_type*> (62)
        à gauche: 41 42
        à droite: 8 9
    args.1 <ast::exps_type*> (63)
        à gauche: 43 44
        à droite: 42 44
    chunks <ast::ChunkList*> (64)
        à gauche: 45 46 47 48
        à droite: 2 18 46 47 48
    varchunk <ast::VarChunk*> (65)
        à gauche: 49 50
        à droite: 47 50 64
    funchunk <ast::FunctionChunk*> (66)
        à gauche: 51 52
        à droite: 48 52
    vardec <ast::VarDec*> (67)
        à gauche: 53 54
        à droite: 49 50
    formals <ast::VarChunk*> (68)
        à gauche: 55 56
        à droite: 59 60 61 62 68 69
    formals.1 <ast::VarChunk*> (69)
        à gauche: 57 58
        à droite: 56 58
    fundec <ast::FunctionDec*> (70)
        à gauche: 59 60 61 62
        à droite: 51 52
    classfields <ast::ChunkList*> (71)
        à gauche: 63 64 65
        à droite: 64 65 76 77
    methodchunk <ast::MethodChunk*> (72)
        à gauche: 66 67
        à droite: 65 67
    methoddec <ast::MethodDec*> (73)
        à gauche: 68 69
        à droite: 66 67
    tychunk <ast::TypeChunk*> (74)
        à gauche: 70 71
        à droite: 46 71
    tydec <ast::TypeDec*> (75)
        à gauche: 72
        à droite: 70 71
    ty <ast::Ty*> (76)
        à gauche: 73 74 75 76 77
        à droite: 33 72
    tyfields <ast::fields_type*> (77)
        à gauche: 78 79
        à droite: 74
    tyfields.1 <ast::fields_type*> (78)
        à gauche: 80 81
        à droite: 79 80
    tyfield <ast::Field*> (79)
        à gauche: 82
        à droite: 57 58 80 81
    typeid <ast::NameTy*> (80)
        à gauche: 83 84
        à droite: 32 54 60 62 69 73 75 76 82


État 0

    0 $accept: • program "end of file"
    1 program: • exp
    2        | • chunks
    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • lvalue
    7    | • "(" exps ")"
    8    | • "identifier" "(" args ")"
    9    | • lvalue "." "identifier" "(" args ")"
   10    | • "identifier" "[" exp "]" "of" exp
   11    | • "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   12    | • lvalue ":=" exp
   13    | • "if" exp "then" exp
   14    | • "if" exp "then" exp "else" exp
   15    | • "while" exp "do" exp
   16    | • "for" "identifier" ":=" exp "to" exp "do" exp
   17    | • "break"
   18    | • "let" chunks "in" exps "end"
   19    | • exp "+" exp
   20    | • exp "-" exp
   21    | • exp "*" exp
   22    | • exp "/" exp
   23    | • exp "=" exp
   24    | • exp "<>" exp
   25    | • exp "<" exp
   26    | • exp "<=" exp
   27    | • exp ">" exp
   28    | • exp ">=" exp
   29    | • "-" exp
   30    | • exp "&" exp
   31    | • exp "|" exp
   32    | • "new" typeid
   33    | • "_cast" "(" exp "," ty ")"
   34 lvalue: • "identifier"
   35       | • lvalue "." "identifier"
   36       | • lvalue "[" exp "]"
   45 chunks: ε •  ["end of file"]
   46       | • tychunk chunks
   47       | • varchunk chunks
   48       | • funchunk chunks
   49 varchunk: • vardec
   50         | • vardec varchunk
   51 funchunk: • fundec
   52         | • fundec funchunk
   53 vardec: • "var" "identifier" ":=" exp
   54       | • "var" "identifier" ":" typeid ":=" exp
   59 fundec: • "function" "identifier" "(" formals ")" "=" exp
   60       | • "function" "identifier" "(" formals ")" ":" typeid "=" exp
   61       | • "primitive" "identifier" "(" formals ")"
   62       | • "primitive" "identifier" "(" formals ")" ":" typeid
   70 tychunk: • tydec
   71        | • tydec tychunk
   72 tydec: • "type" "identifier" "=" ty

    "string"      décalage et aller à l'état 1
    "identifier"  décalage et aller à l'état 2
    "integer"     décalage et aller à l'état 3
    "break"       décalage et aller à l'état 4
    "_cast"       décalage et aller à l'état 5
    "for"         décalage et aller à l'état 6
    "function"    décalage et aller à l'état 7
    "if"          décalage et aller à l'état 8
    "let"         décalage et aller à l'état 9
    "("           décalage et aller à l'état 10
    "-"           décalage et aller à l'état 11
    "new"         décalage et aller à l'état 12
    "nil"         décalage et aller à l'état 13
    "primitive"   décalage et aller à l'état 14
    "type"        décalage et aller à l'état 15
    "var"         décalage et aller à l'état 16
    "while"       décalage et aller à l'état 17
    "_namety"     décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 45 (chunks)

    program   aller à l'état 19
    exp       aller à l'état 20
    lvalue    aller à l'état 21
    chunks    aller à l'état 22
    varchunk  aller à l'état 23
    funchunk  aller à l'état 24
    vardec    aller à l'état 25
    fundec    aller à l'état 26
    tychunk   aller à l'état 27
    tydec     aller à l'état 28


État 1

    4 exp: "string" •

    $défaut  réduction par utilisation de la règle 4 (exp)


État 2

    8 exp: "identifier" • "(" args ")"
   10    | "identifier" • "[" exp "]" "of" exp
   34 lvalue: "identifier" •  ["end of file", "&", ":=", ",", "/", "do", ".", "else", "end", "=", "function", ">=", ">", "in", "[", "<=", "<", "-", "method", "<>", "|", "+", "primitive", "}", "]", ")", ";", "then", "*", "to", "type", "var"]

    "["  décalage et aller à l'état 29
    "("  décalage et aller à l'état 30

    "["      [réduction par utilisation de la règle 34 (lvalue)]
    $défaut  réduction par utilisation de la règle 34 (lvalue)

    conflit par décalage/réduction sur le jeton "[" :
       34 lvalue: "identifier" •
       10 exp: "identifier" • "[" exp "]" "of" exp
      Premier exemple: "identifier" • "[" exp "]" "of" exp "end of file"
      Dérivation par décalage
        $accept
        ↳ 0: program                                        "end of file"
             ↳ 1: exp
                  ↳ 10: "identifier" • "[" exp "]" "of" exp
      Deuxième exemple: "identifier" • "[" exp "]" "end of file"
      Dérivation par réduction
        $accept
        ↳ 0: program                                          "end of file"
             ↳ 1: exp
                  ↳ 6: lvalue
                       ↳ 36: lvalue               "[" exp "]"
                             ↳ 34: "identifier" •



État 3

    3 exp: "integer" •

    $défaut  réduction par utilisation de la règle 3 (exp)


État 4

   17 exp: "break" •

    $défaut  réduction par utilisation de la règle 17 (exp)


État 5

   33 exp: "_cast" • "(" exp "," ty ")"

    "("  décalage et aller à l'état 31


État 6

   16 exp: "for" • "identifier" ":=" exp "to" exp "do" exp

    "identifier"  décalage et aller à l'état 32


État 7

   59 fundec: "function" • "identifier" "(" formals ")" "=" exp
   60       | "function" • "identifier" "(" formals ")" ":" typeid "=" exp

    "identifier"  décalage et aller à l'état 33


État 8

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • lvalue
    7    | • "(" exps ")"
    8    | • "identifier" "(" args ")"
    9    | • lvalue "." "identifier" "(" args ")"
   10    | • "identifier" "[" exp "]" "of" exp
   11    | • "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   12    | • lvalue ":=" exp
   13    | • "if" exp "then" exp
   13    | "if" • exp "then" exp
   14    | • "if" exp "then" exp "else" exp
   14    | "if" • exp "then" exp "else" exp
   15    | • "while" exp "do" exp
   16    | • "for" "identifier" ":=" exp "to" exp "do" exp
   17    | • "break"
   18    | • "let" chunks "in" exps "end"
   19    | • exp "+" exp
   20    | • exp "-" exp
   21    | • exp "*" exp
   22    | • exp "/" exp
   23    | • exp "=" exp
   24    | • exp "<>" exp
   25    | • exp "<" exp
   26    | • exp "<=" exp
   27    | • exp ">" exp
   28    | • exp ">=" exp
   29    | • "-" exp
   30    | • exp "&" exp
   31    | • exp "|" exp
   32    | • "new" typeid
   33    | • "_cast" "(" exp "," ty ")"
   34 lvalue: • "identifier"
   35       | • lvalue "." "identifier"
   36       | • lvalue "[" exp "]"

    "string"      décalage et aller à l'état 1
    "identifier"  décalage et aller à l'état 2
    "integer"     décalage et aller à l'état 3
    "break"       décalage et aller à l'état 4
    "_cast"       décalage et aller à l'état 5
    "for"         décalage et aller à l'état 6
    "if"          décalage et aller à l'état 8
    "let"         décalage et aller à l'état 9
    "("           décalage et aller à l'état 10
    "-"           décalage et aller à l'état 11
    "new"         décalage et aller à l'état 12
    "nil"         décalage et aller à l'état 13
    "while"       décalage et aller à l'état 17
    "_namety"     décalage et aller à l'état 18

    exp     aller à l'état 34
    lvalue  aller à l'état 21


État 9

   18 exp: "let" • chunks "in" exps "end"
   45 chunks: ε •  ["in"]
   46       | • tychunk chunks
   47       | • varchunk chunks
   48       | • funchunk chunks
   49 varchunk: • vardec
   50         | • vardec varchunk
   51 funchunk: • fundec
   52         | • fundec funchunk
   53 vardec: • "var" "identifier" ":=" exp
   54       | • "var" "identifier" ":" typeid ":=" exp
   59 fundec: • "function" "identifier" "(" formals ")" "=" exp
   60       | • "function" "identifier" "(" formals ")" ":" typeid "=" exp
   61       | • "primitive" "identifier" "(" formals ")"
   62       | • "primitive" "identifier" "(" formals ")" ":" typeid
   70 tychunk: • tydec
   71        | • tydec tychunk
   72 tydec: • "type" "identifier" "=" ty

    "function"   décalage et aller à l'état 7
    "primitive"  décalage et aller à l'état 14
    "type"       décalage et aller à l'état 15
    "var"        décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 45 (chunks)

    chunks    aller à l'état 35
    varchunk  aller à l'état 23
    funchunk  aller à l'état 24
    vardec    aller à l'état 25
    fundec    aller à l'état 26
    tychunk   aller à l'état 27
    tydec     aller à l'état 28


État 10

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • lvalue
    7    | • "(" exps ")"
    7    | "(" • exps ")"
    8    | • "identifier" "(" args ")"
    9    | • lvalue "." "identifier" "(" args ")"
   10    | • "identifier" "[" exp "]" "of" exp
   11    | • "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   12    | • lvalue ":=" exp
   13    | • "if" exp "then" exp
   14    | • "if" exp "then" exp "else" exp
   15    | • "while" exp "do" exp
   16    | • "for" "identifier" ":=" exp "to" exp "do" exp
   17    | • "break"
   18    | • "let" chunks "in" exps "end"
   19    | • exp "+" exp
   20    | • exp "-" exp
   21    | • exp "*" exp
   22    | • exp "/" exp
   23    | • exp "=" exp
   24    | • exp "<>" exp
   25    | • exp "<" exp
   26    | • exp "<=" exp
   27    | • exp ">" exp
   28    | • exp ">=" exp
   29    | • "-" exp
   30    | • exp "&" exp
   31    | • exp "|" exp
   32    | • "new" typeid
   33    | • "_cast" "(" exp "," ty ")"
   34 lvalue: • "identifier"
   35       | • lvalue "." "identifier"
   36       | • lvalue "[" exp "]"
   37 exps: ε •  [")"]
   38     | • exps.1
   39 exps.1: • exp
   40       | • exps.1 ";" exp

    "string"      décalage et aller à l'état 1
    "identifier"  décalage et aller à l'état 2
    "integer"     décalage et aller à l'état 3
    "break"       décalage et aller à l'état 4
    "_cast"       décalage et aller à l'état 5
    "for"         décalage et aller à l'état 6
    "if"          décalage et aller à l'état 8
    "let"         décalage et aller à l'état 9
    "("           décalage et aller à l'état 10
    "-"           décalage et aller à l'état 11
    "new"         décalage et aller à l'état 12
    "nil"         décalage et aller à l'état 13
    "while"       décalage et aller à l'état 17
    "_namety"     décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 37 (exps)

    exp     aller à l'état 36
    lvalue  aller à l'état 21
    exps    aller à l'état 37
    exps.1  aller à l'état 38


État 11

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • lvalue
    7    | • "(" exps ")"
    8    | • "identifier" "(" args ")"
    9    | • lvalue "." "identifier" "(" args ")"
   10    | • "identifier" "[" exp "]" "of" exp
   11    | • "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   12    | • lvalue ":=" exp
   13    | • "if" exp "then" exp
   14    | • "if" exp "then" exp "else" exp
   15    | • "while" exp "do" exp
   16    | • "for" "identifier" ":=" exp "to" exp "do" exp
   17    | • "break"
   18    | • "let" chunks "in" exps "end"
   19    | • exp "+" exp
   20    | • exp "-" exp
   21    | • exp "*" exp
   22    | • exp "/" exp
   23    | • exp "=" exp
   24    | • exp "<>" exp
   25    | • exp "<" exp
   26    | • exp "<=" exp
   27    | • exp ">" exp
   28    | • exp ">=" exp
   29    | • "-" exp
   29    | "-" • exp
   30    | • exp "&" exp
   31    | • exp "|" exp
   32    | • "new" typeid
   33    | • "_cast" "(" exp "," ty ")"
   34 lvalue: • "identifier"
   35       | • lvalue "." "identifier"
   36       | • lvalue "[" exp "]"

    "string"      décalage et aller à l'état 1
    "identifier"  décalage et aller à l'état 2
    "integer"     décalage et aller à l'état 3
    "break"       décalage et aller à l'état 4
    "_cast"       décalage et aller à l'état 5
    "for"         décalage et aller à l'état 6
    "if"          décalage et aller à l'état 8
    "let"         décalage et aller à l'état 9
    "("           décalage et aller à l'état 10
    "-"           décalage et aller à l'état 11
    "new"         décalage et aller à l'état 12
    "nil"         décalage et aller à l'état 13
    "while"       décalage et aller à l'état 17
    "_namety"     décalage et aller à l'état 18

    exp     aller à l'état 39
    lvalue  aller à l'état 21


État 12

   32 exp: "new" • typeid
   83 typeid: • "identifier"
   84       | • "_namety" "(" "integer" ")"

    "identifier"  décalage et aller à l'état 40
    "_namety"     décalage et aller à l'état 41

    typeid  aller à l'état 42


État 13

    5 exp: "nil" •

    $défaut  réduction par utilisation de la règle 5 (exp)


État 14

   61 fundec: "primitive" • "identifier" "(" formals ")"
   62       | "primitive" • "identifier" "(" formals ")" ":" typeid

    "identifier"  décalage et aller à l'état 43


État 15

   72 tydec: "type" • "identifier" "=" ty

    "identifier"  décalage et aller à l'état 44


État 16

   53 vardec: "var" • "identifier" ":=" exp
   54       | "var" • "identifier" ":" typeid ":=" exp

    "identifier"  décalage et aller à l'état 45


État 17

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • lvalue
    7    | • "(" exps ")"
    8    | • "identifier" "(" args ")"
    9    | • lvalue "." "identifier" "(" args ")"
   10    | • "identifier" "[" exp "]" "of" exp
   11    | • "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   12    | • lvalue ":=" exp
   13    | • "if" exp "then" exp
   14    | • "if" exp "then" exp "else" exp
   15    | • "while" exp "do" exp
   15    | "while" • exp "do" exp
   16    | • "for" "identifier" ":=" exp "to" exp "do" exp
   17    | • "break"
   18    | • "let" chunks "in" exps "end"
   19    | • exp "+" exp
   20    | • exp "-" exp
   21    | • exp "*" exp
   22    | • exp "/" exp
   23    | • exp "=" exp
   24    | • exp "<>" exp
   25    | • exp "<" exp
   26    | • exp "<=" exp
   27    | • exp ">" exp
   28    | • exp ">=" exp
   29    | • "-" exp
   30    | • exp "&" exp
   31    | • exp "|" exp
   32    | • "new" typeid
   33    | • "_cast" "(" exp "," ty ")"
   34 lvalue: • "identifier"
   35       | • lvalue "." "identifier"
   36       | • lvalue "[" exp "]"

    "string"      décalage et aller à l'état 1
    "identifier"  décalage et aller à l'état 2
    "integer"     décalage et aller à l'état 3
    "break"       décalage et aller à l'état 4
    "_cast"       décalage et aller à l'état 5
    "for"         décalage et aller à l'état 6
    "if"          décalage et aller à l'état 8
    "let"         décalage et aller à l'état 9
    "("           décalage et aller à l'état 10
    "-"           décalage et aller à l'état 11
    "new"         décalage et aller à l'état 12
    "nil"         décalage et aller à l'état 13
    "while"       décalage et aller à l'état 17
    "_namety"     décalage et aller à l'état 18

    exp     aller à l'état 46
    lvalue  aller à l'état 21


État 18

   11 exp: "_namety" • "(" "integer" ")" "[" exp "]" "of" exp

    "("  décalage et aller à l'état 47


État 19

    0 $accept: program • "end of file"

    "end of file"  décalage et aller à l'état 48


État 20

    1 program: exp •  ["end of file"]
   19 exp: exp • "+" exp
   20    | exp • "-" exp
   21    | exp • "*" exp
   22    | exp • "/" exp
   23    | exp • "=" exp
   24    | exp • "<>" exp
   25    | exp • "<" exp
   26    | exp • "<=" exp
   27    | exp • ">" exp
   28    | exp • ">=" exp
   30    | exp • "&" exp
   31    | exp • "|" exp

    "&"   décalage et aller à l'état 49
    "/"   décalage et aller à l'état 50
    "="   décalage et aller à l'état 51
    ">="  décalage et aller à l'état 52
    ">"   décalage et aller à l'état 53
    "<="  décalage et aller à l'état 54
    "<"   décalage et aller à l'état 55
    "-"   décalage et aller à l'état 56
    "<>"  décalage et aller à l'état 57
    "|"   décalage et aller à l'état 58
    "+"   décalage et aller à l'état 59
    "*"   décalage et aller à l'état 60

    $défaut  réduction par utilisation de la règle 1 (program)


État 21

    6 exp: lvalue •  ["end of file", "&", ",", "/", "do", "else", "end", "=", "function", ">=", ">", "in", "<=", "<", "-", "method", "<>", "|", "+", "primitive", "}", "]", ")", ";", "then", "*", "to", "type", "var"]
    9    | lvalue • "." "identifier" "(" args ")"
   12    | lvalue • ":=" exp
   35 lvalue: lvalue • "." "identifier"
   36       | lvalue • "[" exp "]"

    ":="  décalage et aller à l'état 61
    "."   décalage et aller à l'état 62
    "["   décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 6 (exp)


État 22

    2 program: chunks •

    $défaut  réduction par utilisation de la règle 2 (program)


État 23

   45 chunks: ε •  ["end of file", "in"]
   46       | • tychunk chunks
   47       | • varchunk chunks
   47       | varchunk • chunks
   48       | • funchunk chunks
   49 varchunk: • vardec
   50         | • vardec varchunk
   51 funchunk: • fundec
   52         | • fundec funchunk
   53 vardec: • "var" "identifier" ":=" exp
   54       | • "var" "identifier" ":" typeid ":=" exp
   59 fundec: • "function" "identifier" "(" formals ")" "=" exp
   60       | • "function" "identifier" "(" formals ")" ":" typeid "=" exp
   61       | • "primitive" "identifier" "(" formals ")"
   62       | • "primitive" "identifier" "(" formals ")" ":" typeid
   70 tychunk: • tydec
   71        | • tydec tychunk
   72 tydec: • "type" "identifier" "=" ty

    "function"   décalage et aller à l'état 7
    "primitive"  décalage et aller à l'état 14
    "type"       décalage et aller à l'état 15
    "var"        décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 45 (chunks)

    chunks    aller à l'état 64
    varchunk  aller à l'état 23
    funchunk  aller à l'état 24
    vardec    aller à l'état 25
    fundec    aller à l'état 26
    tychunk   aller à l'état 27
    tydec     aller à l'état 28


État 24

   45 chunks: ε •  ["end of file", "in"]
   46       | • tychunk chunks
   47       | • varchunk chunks
   48       | • funchunk chunks
   48       | funchunk • chunks
   49 varchunk: • vardec
   50         | • vardec varchunk
   51 funchunk: • fundec
   52         | • fundec funchunk
   53 vardec: • "var" "identifier" ":=" exp
   54       | • "var" "identifier" ":" typeid ":=" exp
   59 fundec: • "function" "identifier" "(" formals ")" "=" exp
   60       | • "function" "identifier" "(" formals ")" ":" typeid "=" exp
   61       | • "primitive" "identifier" "(" formals ")"
   62       | • "primitive" "identifier" "(" formals ")" ":" typeid
   70 tychunk: • tydec
   71        | • tydec tychunk
   72 tydec: • "type" "identifier" "=" ty

    "function"   décalage et aller à l'état 7
    "primitive"  décalage et aller à l'état 14
    "type"       décalage et aller à l'état 15
    "var"        décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 45 (chunks)

    chunks    aller à l'état 65
    varchunk  aller à l'état 23
    funchunk  aller à l'état 24
    vardec    aller à l'état 25
    fundec    aller à l'état 26
    tychunk   aller à l'état 27
    tydec     aller à l'état 28


État 25

   49 varchunk: • vardec
   49         | vardec •  ["end of file", "function", "in", "method", "primitive", "}", "type"]
   50         | • vardec varchunk
   50         | vardec • varchunk
   53 vardec: • "var" "identifier" ":=" exp
   54       | • "var" "identifier" ":" typeid ":=" exp

    "var"  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 49 (varchunk)

    varchunk  aller à l'état 66
    vardec    aller à l'état 25

    Conflit entre la règle 49 et le jeton "var" résolu par décalage ("_chunks" < "var").


État 26

   51 funchunk: • fundec
   51         | fundec •  ["end of file", "in", "type", "var"]
   52         | • fundec funchunk
   52         | fundec • funchunk
   59 fundec: • "function" "identifier" "(" formals ")" "=" exp
   60       | • "function" "identifier" "(" formals ")" ":" typeid "=" exp
   61       | • "primitive" "identifier" "(" formals ")"
   62       | • "primitive" "identifier" "(" formals ")" ":" typeid

    "function"   décalage et aller à l'état 7
    "primitive"  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 51 (funchunk)

    funchunk  aller à l'état 67
    fundec    aller à l'état 26

    Conflit entre la règle 51 et le jeton "function" résolu par décalage ("_chunks" < "function").
    Conflit entre la règle 51 et le jeton "primitive" résolu par décalage ("_chunks" < "primitive").


État 27

   45 chunks: ε •  ["end of file", "in"]
   46       | • tychunk chunks
   46       | tychunk • chunks
   47       | • varchunk chunks
   48       | • funchunk chunks
   49 varchunk: • vardec
   50         | • vardec varchunk
   51 funchunk: • fundec
   52         | • fundec funchunk
   53 vardec: • "var" "identifier" ":=" exp
   54       | • "var" "identifier" ":" typeid ":=" exp
   59 fundec: • "function" "identifier" "(" formals ")" "=" exp
   60       | • "function" "identifier" "(" formals ")" ":" typeid "=" exp
   61       | • "primitive" "identifier" "(" formals ")"
   62       | • "primitive" "identifier" "(" formals ")" ":" typeid
   70 tychunk: • tydec
   71        | • tydec tychunk
   72 tydec: • "type" "identifier" "=" ty

    "function"   décalage et aller à l'état 7
    "primitive"  décalage et aller à l'état 14
    "type"       décalage et aller à l'état 15
    "var"        décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 45 (chunks)

    chunks    aller à l'état 68
    varchunk  aller à l'état 23
    funchunk  aller à l'état 24
    vardec    aller à l'état 25
    fundec    aller à l'état 26
    tychunk   aller à l'état 27
    tydec     aller à l'état 28


État 28

   70 tychunk: • tydec
   70        | tydec •  ["end of file", "function", "in", "primitive", "var"]
   71        | • tydec tychunk
   71        | tydec • tychunk
   72 tydec: • "type" "identifier" "=" ty

    "type"  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 70 (tychunk)

    tychunk  aller à l'état 69
    tydec    aller à l'état 28

    Conflit entre la règle 70 et le jeton "type" résolu par décalage ("_chunks" < "type").


État 29

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • lvalue
    7    | • "(" exps ")"
    8    | • "identifier" "(" args ")"
    9    | • lvalue "." "identifier" "(" args ")"
   10    | • "identifier" "[" exp "]" "of" exp
   10    | "identifier" "[" • exp "]" "of" exp
   11    | • "_namety" "(" "integer" ")" "[" exp "]" "of" exp
   12    | • lvalue ":=" exp
   13    | • "if" exp "then" exp
   14    | • "if" exp "then" exp "else" exp
   15    | • "while" exp "do" exp
   16    | • "for" "identifier" ":=" exp "to" exp "do" exp
   17    | • "break"
   18    | • "let" chunks "in" exps "end"
   19    | • exp "+" exp
   20    | • exp "-" exp
   21    | • exp "*" exp
   22    | • exp "/" exp
   23    | • exp "=" exp
   24    | • exp "<>" exp
   25    | • exp "<" exp
   26    | • exp "<=" exp
   27    | • exp ">" exp
   28    | • exp ">=" exp
   29    | • "-" exp
   30    | • exp "&" exp
   31    | • exp "|" exp
   32    | • "new" typeid
   33    | • "_cast" "(" exp "," ty ")"
   34 lvalue: • "identifier"
   35       | • lvalue "." "identifier"
   36       | • lvalue "[" exp "]"

    "string"      décalage et aller à l'état 1
    "identifier"  décalage et aller à l'état 2
    "integer"     décalage et aller à l'état 3
    "break"       décalage et aller à l'état 4
    "_cast"       décalage et aller à l'état 5
    "for"         décalage et aller à l'état 6
    "if"          décalage et aller à l'état 8
    "let"         décalage et aller à l'état 9
    "("           décalage et aller à l'état 10
    "-"           décalage et aller à l'état 11
    "new"         décalage et aller à l'état 12
    "nil"         décalage et aller à l'état 13
    "while"       décalage et aller à l'état 17
    "_namety"     décalage et aller à l'état 18

    exp     aller à l'état 70
    lvalue  aller à l'état 21


État 30
